[gd_scene load_steps=6 format=3 uid="uid://tmoks2b3nweb"]

[ext_resource type="Script" path="res://scenes/link.gd" id="1_p0gm0"]
[ext_resource type="FontFile" uid="uid://d15asrafrelve" path="res://fonts/Rubik/static/Rubik-Bold.ttf" id="1_rh72s"]

[sub_resource type="LabelSettings" id="LabelSettings_j528u"]
font = ExtResource("1_rh72s")
font_size = 32
font_color = Color(0.917647, 0.890196, 0.172549, 1)

[sub_resource type="Theme" id="Theme_sjqu7"]
Button/font_sizes/font_size = 32
Button/fonts/font = ExtResource("1_rh72s")

[sub_resource type="LabelSettings" id="LabelSettings_o44n6"]
font = ExtResource("1_rh72s")
font_size = 20

[node name="Link" type="Window"]
title = "Fracton - Links"
initial_position = 4
size = Vector2i(400, 512)
unresizable = true
script = ExtResource("1_p0gm0")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.27451, 0.415686, 0.45098, 1)

[node name="Title" type="Label" parent="."]
offset_right = 85.0
offset_bottom = 38.0
grow_horizontal = 2
text = "Links"
label_settings = SubResource("LabelSettings_j528u")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 32.0
offset_right = 5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 32

[node name="Add" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -53.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("Theme_sjqu7")
text = "+"

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 24.0
grow_horizontal = 2
text = "Add"
label_settings = SubResource("LabelSettings_o44n6")

[node name="Txt" type="LineEdit" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -35.5
offset_bottom = -4.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Text"
max_length = 25
context_menu_enabled = false

[node name="URI" type="LineEdit" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 4.5
offset_bottom = 35.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "URI"
context_menu_enabled = false

[node name="Create" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -58.0
offset_top = -48.0
offset_right = 58.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_sjqu7")
theme_override_font_sizes/font_size = 20
text = "Create"

[node name="Nope" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -37.0
offset_bottom = 37.0
grow_horizontal = 0
theme = SubResource("Theme_sjqu7")
theme_override_font_sizes/font_size = 24
text = "X"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="Panel/Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="Panel/Nope" to="." method="_on_nope_pressed"]
